package it.unibo.cluedolite.model.creationcards.impl;

/**
* Enum representing the type of a card in the game.
 */
public enum CardType {
    CHARACTER,
    WEAPON,
    ROOM
}