@startuml
skinparam classAttributeIconSize 0

' ============================
'        CLASSI PRINCIPALI
' ============================

abstract class AbstractCard {
    - name : String
    + getName() : String
    + getType() : CardType
    + toString() : String
}

class Characters {
    + getType() : CardType
}

class Weapons {
    + getType() : CardType
}

class Rooms {
    + getType() : CardType
}

enum CardType {
    CHARACTER
    WEAPON
    ROOM
}

' ============================
'        EREDITARIETÀ
' ============================

AbstractCard <|-- Characters
AbstractCard <|-- Weapons
AbstractCard <|-- Rooms

@enduml
